--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "transformersjs-chrome",
-  "displayName": "Transformers.js Chrome Extension",
+  "displayName": "Private AI Assistant: Running LLM locally",
   "version": "0.0.1",
-  "description": "Chrome extension for Transformers.js",
+  "description": "Private AI Assistant enables users to interact with language models directly in their browser without an internet connection.",
   "author": "Taekmin Kim <tantara.tm@gmail.com>",
   "scripts": {
     "dev": "pnpm with-env plasmo dev",
@@ -50,15 +50,9 @@
     "typescript": "5.3.3"
   },
   "manifest": {
-    "host_permissions": [
-      "https://*/*"
-    ],
     "permissions": [
       "sidePanel",
-      "tabs",
       "storage",
-      "activeTab",
-      "scripting",
       "unlimitedStorage"
     ],
     "content_security_policy": {
