--- a/package.json
+++ b/package.json
@@ -61,6 +61,16 @@
       "storage",
       "unlimitedStorage"
     ],
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "~output/chtml/fonts/woff-v2/*"
+        ],
+        "matches": [
+          "<all_urls>"
+        ]
+      }
+    ],
     "content_security_policy": {
       "extension_pages": "script-src 'self' 'wasm-unsafe-eval'"
     }
